[package]
name = "solana-hexagonal-poh"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "shp"
path = "bin/main.rs"
test = false
bench = false

[dependencies]
anyhow = "1.0.89"
axum = "0.7.7"
blake3 = "1.5.4"
dotenvy = "0.15.7"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = [ "rt-multi-thread", "macros" ] }
tracing = "0.1.40"
